--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   },
   "type": "module",
   "dependencies": {
+    "@radix-ui/react-tooltip": "^1.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
     "webextension-polyfill": "^0.10.0"
   },
   "devDependencies": {
