--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
+    "react-use-websocket": "^4.3.1",
     "webextension-polyfill": "^0.10.0"
   },
   "devDependencies": {
