--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@radix-ui/react-tooltip": "^1.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
