--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
+    "react-markdown": "^8.0.6",
+    "react-spinners": "^0.13.8",
+    "react-syntax-highlighter": "^15.5.0",
     "react-use-websocket": "^4.3.1",
     "webextension-polyfill": "^0.10.0"
   },
@@ -27,6 +30,7 @@
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/react-syntax-highlighter": "^15.5.6",
     "@types/webextension-polyfill": "^0.10.0",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
