--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "vite-web-extension",
-  "displayName": "Web Extension Boilerplate",
-  "version": "1.1.0",
-  "description": "A simple chrome extension template with Vite, React, TypeScript and Tailwind CSS.",
+  "displayName": "PageLens",
+  "version": "0.1.0",
+  "description": "Bring ChatGPT, Claude, and more to every webpage.",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -14,6 +14,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@clerk/clerk-react": "^4.12.8",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@radix-ui/react-tooltip": "^1.0.5",
     "react": "^18.2.0",
