--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "type": "module",
   "dependencies": {
-    "@clerk/clerk-react": "^4.12.8",
+    "@clerk/clerk-js": "^4.32.7",
+    "@clerk/clerk-react": "^4.12.9",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@radix-ui/react-tooltip": "^1.0.5",
     "react": "^18.2.0",
