--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vite-web-extension",
   "displayName": "PageLens",
-  "version": "0.1.2",
+  "version": "0.2.0",
   "description": "Bring ChatGPT, Claude, and more to every webpage.",
   "license": "MIT",
   "repository": {
@@ -15,8 +15,8 @@
   },
   "type": "module",
   "dependencies": {
+    "@clerk/chrome-extension": "^0.2.0",
     "@clerk/clerk-js": "^4.32.7",
-    "@clerk/clerk-react": "^4.12.9",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@radix-ui/react-tooltip": "^1.0.5",
     "@sentry/react": "^7.45.0",
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-markdown": "^8.0.6",
+    "react-router-dom": "^6.10.0",
     "react-spinners": "^0.13.8",
     "react-syntax-highlighter": "^15.5.0",
     "react-use-websocket": "^4.3.1",
